fix footer spacing

--- a/src/App.less
+++ b/src/App.less
@@ -100,9 +100,8 @@ footer {
   color:white;
   text-align: center;
   padding: 0.5%;
-
-  width: 100%;
   height: 5vh;
+  width: 100%;
   background: #3E4448;
 }
 
@@ -314,4 +313,8 @@ input[type=range] {
       display: block;
       width: 100%;
     }
+
+    footer {
+      height: auto;
+   }
 }
